# invariant-ekf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
benchmark/: CMakeLists.txt  kinematics.cpp  landmarks.cpp
bindings/: CMakeLists.txt  expose-inekf.cpp  expose-lie-group.cpp  expose-noise-params.cpp  expose-robot-state.cpp  module.cpp
bindings/inekf/: __init__.py
data/: propagation_speed_test_data.txt
examples/: kinematics.cpp  kinematics.py  landmarks.cpp
include/: InEKF.hpp  LieGroup.hpp  NoiseParams.hpp  RobotState.hpp
include/inekf/: InEKF.hpp  LieGroup.hpp  NoiseParams.hpp  RobotState.hpp  python.hpp  utils.hpp
src/: InEKF.cpp  LieGroup.cpp  NoiseParams.cpp  RobotState.cpp
tests/: CMakeLists.txt  correction_speed.cpp  propagation_kinematics.cpp  propagation_speed.cpp
