<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inekf</name>
  <version>0.0.0</version>
  <description>Invariant EKF</description>
  <maintainer email="ewen.dantec@inria.fr">edantec</maintainer>
  <license>BSD-3-Clause</license>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
